--- a/package.json
+++ b/package.json
@@ -20,10 +20,7 @@
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
-        "lint": "eslint ./",
-        "lint-fix": "eslint ./ --fix",
-        "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
-        "clean": "yarn format && yarn lint-fix"
+        "format": "prettier --write \"**/*.{js,jsx,json,md}\""
     },
     "eslintConfig": {
         "extends": [
@@ -44,16 +41,6 @@
         ]
     },
     "devDependencies": {
-        "babel-eslint": "^10.1.0",
-        "eslint": "^7.24.0",
-        "eslint-config-airbnb": "^18.2.1",
-        "eslint-config-airbnb-base": "^14.2.1",
-        "eslint-config-prettier": "^8.2.0",
-        "eslint-plugin-import": "^2.22.1",
-        "eslint-plugin-jsx-a11y": "^6.4.1",
-        "eslint-plugin-prettier": "^3.4.0",
-        "eslint-plugin-react": "^7.23.2",
-        "eslint-plugin-react-hooks": "^4.2.0",
         "prettier": "^2.2.1"
     }
 }
