--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "@material-ui/icons": "^4.11.2",
         "axios": "^0.21.1",
         "bootstrap": "^4.6.0",
+        "highcharts": "^9.0.1",
         "lodash": "^4.17.21",
         "react": "^17.0.2",
         "react-bootstrap": "^1.5.2",
